<resources>
    <string name="app_name">Java Naja</string>
    <string name="facebook_app_id">230233111178824</string>
    <string name="fb_login_protocol_scheme">fb230233111178824</string>
    <string name="edit_picProfile">แก้ไขรูปโปรไฟล์</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings"></string>
    <string name="title_activity_chap1">บทที่ 1 ภาษาคอมพิวเตอร์และการพัฒนาโปรแกรม</string>
    <string name="title_activity_chap2">บทที่ 2 พื้นฐานภาษาจาวา</string>
    <string name="title_activity_chap3">บทที่  3 คำสั่งควบคุมโปรแกรม</string>
    <string name="title_activity_chap4">บทที่ 4 เมธอด (Methods) </string>
    <string name="title_activity_chap5">บทที่ 5 ข้อมูลอาร์เรย์และสตริง</string>
    <string name="title_activity_chap6">บทที่ 6 คลาสและการเขียนโปรแกรมเชิงวัตถุเบื้องต้น</string>
    <string name="title_activity_chap7">บทที่ 7 วิธีการเชิงวัตถุและการออกแบบคลาส</string>
    <string name="title_activity_chap8">บทที่ 8 การจัดการข้อผิดพลาดและประมวลผลไฟล์</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="score">0</string>
    <string name="Chapter1">บทที่ 1</string>
    <string name="Chapter2">บทที่ 2</string>
    <string name="Chapter3">บทที่ 3</string>
    <string name="Chapter4">บทที่ 4</string>
    <string name="Chapter5">บทที่ 5</string>
    <string name="Chapter6">บทที่ 6</string>
    <string name="Chapter7">บทที่ 7</string>
    <string name="Chapter8">บทที่ 8</string>
    <string name="before_test">แบบทดสอบก่อนเรียน</string>
    <string name="after_test">แบบทดสอบหลังเรียน</string>
    <string name="total">คะแนนรวมทั้งหมด</string>
    <string name="point1">หน่วยที่ 1</string>
    <string name="point2">หน่วยที่ 2</string>
    <string name="point3">หน่วยที่ 3</string>
    <string name="point4">หน่วยที่ 4</string>
    <string name="point5">หน่วยที่ 5</string>
    <string name="point6">หน่วยที่ 6</string>
    <string name="point7">หน่วยที่ 7</string>
    <string name="point8">หน่วยที่ 8</string>
    <string name="point9">หน่วยที่ 9</string>
    <string name="point10">หน่วยที่ 10</string>
    <string name="certificate">พิมพ์เกียรติบัตร</string>
    <string name="Content1_1Leader">บทที่ 1\nภาษาคอมพิวเตอร์และการพัฒนาโปรแกรม</string>
    <string name="Content1_1Header">1.1 โปรแกรมภาษา</string>
    <string name="Content1_1Body_1">\t\t โปรแกรมคอมพิวเตอร์ไม่ว่าจะเขียนด้วยภาษาระดับต่ำหรือภาษาระดับสูงจะต้องแปลงภาษาให้เป็นรหัสภาษาเครื่องคอมพิวเตอร์ก่อนภาษาคอมพิวเตอร์เป็นการนำชุดคำสั่งแต่ละคำสั่งมาต่อกันให้ทำงาน\n\t\t
        ภาษาคอมพิวเตอร์ที่ใช้รหัสนีโมนิกหรือรหัสเลขฐานสองในการเขียนโปรแกรม เรียกว่า ภาษาแอสเซมบลี (Assembly Language)\n\t\t
        การเขียนโปรแกรมด้วยภาษาแอสเซมบลีจะต้องใช้ตัวแปลให้เป็นภาษาเครื่องตัวแปลนี้เรียกว่า แอสเซมเบลอร์ (Assembler)</string>
    <string name="Content1_1Body_2">\t\t การเขียนโปรแกรมด้วยภาษาระดับสูงจะมีตัวแปลสองประเภท คือ อินเทอร์พรีเตอร์
        (Interpreter) การทำงานของตัวอินเทอร์พรีเตอร์จะแปลความหมายของทีละคำสั่ง
        และอีกคำสั่งคือ คอมไพเลอร์ (Compiler) การทำงานจะแปลโปรแกรมต้นฉบับทั้งหมด
        และโปรแกรมจะทำงานได้เร็วขึ้นเพราะไม่ต้องแปลคำสั่งถัดไปอีก</string>
    <string name="Content1_2Header">1.2 ภาษาจาวา</string>
    <string name="Content1_2Body_1">\t\t ภาษาจาวา (JAVA)
        พัฒนาโดยบริษัท Sun microsystem
        โดยพัฒนาให้เป็นภาษาใช้ในการเขียนโปรแกรมเชิงวัตถุ
        (Object-Oriented Programming)
        สามารถทำงานบนเครื่องที่ต่างกันได้โดยไม่ต้องคอมไพใหม่ เรียกว่า
        Platform independent</string>
    <string name="Content1_2Body_2">
        Write Once, run anywhere\n(เขียนครั้งเดียวรันได้ทุกแพลตฟอร์ม)</string>
    <string name="Content1_3Header">1.3 ชุดพัฒนาภาษาจาวา</string>
    <string name="Content2_1Leader"> บทที่ 2 \n พื้นฐานภาษาจาวา </string>
    <string name="Content2_3Header"> 2.3 ชนิดของข้อมูล ตัวแปรและค่าคงที่ </string>
    <string name="Content2_3Body_1"> \t\t ตัวแปร คือ ชื่อที่กำหนดขึ้นสำหรับเก็บข้อมูล หากระบบต้องการเก็บข้อมูลที่รับเข้าจากอินพุตต่างๆ จะต้องจองพื้นที่หน่วยความจำคอมพิวเตอร์สำหรับเก็บข้อมูล </string>
    <string name="Content2_3Body_2"> \t\t การกำหนดค่าตัวแปรแต่ละตัวต้องกำหนดด้วยว่าจะให้ตัวแปรนั้นเก็บข้อมูลชนิดใด รูปแบบการประกาศตัวแปรในภาษาจาวา ดังนี้ </string>
    <string name="Content2_3Body_3"> \n รูปแบบ </string>
    <string name="Content2_3Body_4"> \n\t ถ้าหากมีตัวแปรหลายตัวจะใช้เครื่องหมาย , คั่น ดังตัวอย่าง \n
\t int x; \t\t //ประกาศตัวแปร x สำหรับเก็บเลขจำนวนเต็ม \n
\t int x,y; \t\t //ประกาศตัวแปร x และ y สำหรับเก็บเลขจำนวนเต็ม \n </string>
    <string name="Content2_3Body_5"> \t\t เมื่อประกาศตัวแปรขึ้นมาแล้วสามารถใช้เครื่องหมาย = ในการกำหนดค่าได้อีก รูปแบบดังนี้ \n </string>
    <string name="Content2_3Body_6"> รูปแบบ </string>
    <string name="Content2_3Body_7"> \t\t ข้อมูลที่กำหนดกับชนิดตัวแปรจะต้องเป็นข้อมูลประเภทเดียวกัน ชนิดข้อมูลในภาษาวา ดังนี้ \n
\t\t 1. ข้อมูลแบบพื้นฐาน (primitive data type) \n
\t\t 2. ข้อมูลแบบอ้างอิง (reference data type) \n </string>
    <string name="Content2_3Body_8"> \t\t ข้อมูลทั้งสองประเภทนี้จะต่างกันตรงที่การอ้างถึงตำแหน่งหน่วยความจำที่ใช้เก็บข้อมูลจริง สำหรับข้อมูลแบบพื้นฐานในภาษาจาวาแบ่งออกเป็น 4 กลุ่ม ดังนี้ </string>
    <string name="Content2_3Body_9"> \t\t 1. ข้อมูลชนิดตรรกะ (Logical) \n
\t\t 2. ข้อมูลชนิดอักขระ (Textual) \n
\t\t 3. ข้อมูลชนิดจำนวนเต็ม (Integer) \n
\t\t 4. ข้อมูลชนิดเลขทศนิยม (Floating point) \n </string>
    <string name="Content2_3Body_10"> ข้อมูลแบบตรรกะ (Logical) </string>
    <string name="Content2_3Body_11"> \t\t ข้อมูลประเภทนี้จะมีค่าแบบ Boolean โดยมีค่าเพียงสองค่า คือ true (จริง)กับ false (เท็จ) ดังตัวอย่าง \n </string>
    <string name="Content2_3Body_12"> \n\t\t - เป็นการประกาศตัวแปรชื่อ check ให้เป็นข้อมูลแบบบูลีนและกำหนดให้เป็นจริง \n
\t\t - ส่วน no_check ถูกกำหนดให้เป็นตัวแปรแบบบูลีนและกำหนดให้เป็นเท็จ \n </string>
    <string name="Content2_3Body_13"> ข้อมูลแบบตัวอักขระ (Textual)</string>
    <string name="Content2_3Body_14"> \t\t ตัวอักขระเป็นข้อมูลที่มีความยาวไม่เกิน 1 ตัวอักษร การเก็บข้อมูลประเภทนี้จะใช้คำว่า char ในภาษาจาวา การเก็บข้อมูลอักขระลงหน่วยความจำ จะใช้รหัสแบบ Unicode เป็นรหัสที่มีขนาด 16 บิต
การกำหนดข้อมูลที่เป็นตัวอักขระจะต้องเขียนอยู่ใน ‘ ’ (single quote) หรือ กำหนดค่ารหัส Unicode โดยตรงก็ได้ ใช้สัญลักษณ์ ⧵u นำหน้าแล้วตามด้วยเลขฐานสิบหกของรหัสนั้น ดังตัวอย่าง \n </string>
    <string name="Content2_3Body_15">\t\t ตัวอย่าง </string>
    <string name="Content2_3Body_16"> \n ข้อมูลจำนวนจริง (Integer) </string>
    <string name="Content2_3Body_17"> \t\t ข้อมูลแบบจำนวนเต็มมี 4 ประเภท คือ byte, short, int และ long แต่ละประเภทจะต่างกันตรงที่ขาดของหน่วยความจำ ทำให้แต่ละประเภทเก็บข้อมูลได้ในช่วงที่ต่างกัน \n
\t\t การประกาศตัวแปรสำหรับเก็บข้อมูลจำนวนเต็มจะต้องเลือกชนิดข้อมูลที่เหมาะสมตัวแปร เพื่อไม่ให้ใช้พื้นที่หน่วยความจำเกินความจำเป็น สำหรับขนาดและช่วงที่เก็บข้อมูล ดังตาราง 2.2 \n </string>
    <string name="Content2_3Body_18"> ตัวอย่าง </string>
    <string name="Content2_3Body_19"> \n\t\t จากตัวอย่างด้านบน เมื่อประกาศตัวแปรเลขจำนวนเต็ม สามารถกำหนดค่าให้กับตัวแปรได้ แต่ถ้าตัวแปรนั้นเป็นชนิด long จะต้องใส่ l หรือ L ตามหลัง และยังสามารถกำหนดเป็นเลขฐานสิบหกได้
โดยใช้ 0x (ศูนย์เอ็กซ์) นำหน้าตัวเลขขั้น \n </string>
    <string name="Content2_3Body_20"> ข้อมูลชนิดเลขทศนิยม (Floating-Point) </string>
    <string name="Content2_3Body_21"> \t\t ข้อมูลประเภทนี้ใช้สำหรับเก็บเลขจำนวนจริง (Real number) ในภาษาจาวามี 2 ชนิด คือ \n
\t\t 1. float จะใช้หน่วยความจำในการเก็บ 32 บิต \n
\t\t 1. double จะใช้หน่วยความจำ 64 บิต \n
\t\t ในภาษาจาวาเมื่อกำหนดข้อมูลที่เป็นเลขทศนิยมจะให้มีข้อมูลเป็นชนิด double แต่ถ้าเขียนข้อมูลชนิด float จะต้องมี f หรือ F ตามหลัง ตัวอย่างเช่น \n </string>
    <string name="Content2_3Body_22"> \n ตารางที่ 2.2 ข้อมูลแบบพื้นฐานในภาษาจาวา </string>
    <string name="Content2_3Body_23"> การกำหนดชื่อและคีย์เวิร์ด </string>
    <string name="Content2_3Body_24"> \t\t ในการเขียนโปรแกรมจะต้องมีการกำหนดชื่อให้ส่วนต่างๆ เช่น กำหนดชื่อให้กับตัวแปร ชื่อของคลาส ชื่อของเมธอด หรือชื่อของค่าคงที่ การกำหนดชื่อมีกฎการตั้งดังนี้ \n
\t\t 1. ต้องขึ้นต้นด้วยตัวอักขระ A – Z , a – z, $ (dollar sign) หรือ _ เท่านั้น \n
\t\t 2. ต่อมาอาจเป็นตัวเลขหรือตัวอักขระตามข้อ 1 ก็ได้ \n
\t\t 3. ตัวพิมพ์ใหญ่และตัวพิมพ์เล็กมีความหมายต่างกัน \n
\t\t 4. ต้องไม่เว้นวรรคระหว่างการตั้งชื่อ \n
\t\t 5. ต้องไม่ซ้ำกับคีย์เวิร์ดที่จาวารู้จัก \n </string>
    <string name="Content2_3Body_25"> ค่าคงที่ </string>
    <string name="Content2_3Body_26"> \t\t การประกาศค่าคงที่ซึ่งมีค่าคงเดิมตลอดทั้งโปแกรม จะใช้คำว่า final ไว้หน้าการประกาศชื่อ โดยมีรูปแบบดังนี้ </string>
    <string name="Content2_3Body_27"> \n การเขียนคอมเมนต์ในภาษาจาวา </string>
    <string name="Content2_3Body_28"> \t\t การเขียนโปรแกรมอาจต้องมีข้อความสำหรับอธิบายส่วนต่างๆ ของโปรแกรม โดยข้อความเหล่านี้ไม่มีผลต่อการทำงานของโปรแกรม ใช้เพียงอธิบายให้ผู้อ่านเข้าใจในโปรแกรมได้ง่าย ในภาษาจาวามีคอมเมนต์ 3 ประเภท คือ \n
\t\t 1. คอมเมนต์บรรทัดเดียว เขียนโดยใช้ // หมายความว่าข้อความที่ตามมาจนจบบรรทัดเป็นคำอธิบาย \n
\t\t 2. คอมเมนต์แบบหลายบรรทัด เขียนโดยใช้เครื่องหมาย /* และจบด้วย */ ใช้เขียนอธิบายตั้งแต่หนึ่งบรรทัดขึ้นไป \n
\t\t 3. คอมเมนต์แบบเอกสารประกอบโปรแกรม จะสร้างเป็นเอกสาร HTML เรียกว่า Documentation Comment การเขียนจะเริ่มด้วยเครื่องหมาย /** และจบด้วยเครื่องหมาย */ \n </string>
    <string name="content2_3pic1"> \t\t dataType variableName[,variablaName]; \n
\t หรือ \n
\t\t ชนิดข้อมูล ตัวแปร; </string>
    <string name="content2_3pic2"> \t\t boolean check = true; \n
\t\t boolean no_check = false;  </string>
    <string name="content2_3pic3"> \t Char x,y; \t //ประกาศตัวแปร x และ y สำหรับเก็บอักขระ \n
\t x = “A”; \t //เก็บตัวอักขระ A ลงในตัวแปร x \n
\t y = ‘\u0041’; \t //เก็บรหัสอักขระของตัว A ลงในตัวแปร y </string>
    <string name="content2_3pic4"> \t int x; \t //ประกาศตัวแปร x เป็นข้อมูลชนิด int \n
\t long m; \t //ประกาศตัวแปร m เป็นข้อมูลชนิด long \n
\t x = 3; \t //กำหนดให้ x เก็บข้อมูลที่มีค่าเป็น 3 \n
\t m = 32l; \t //กำหนดค่า 32 ให้กับ m ซึ่งเป็นข้อมูลชนิด long \n
\t x = 0x1FE; \t //กำหนดค่าเลขฐานสิบหก 1FE ให้กับตัวแปร x  </string>
    <string name="content2_3pic5"> \t double m = 3.12; \t //กำหนดให้ m เก็บเลขทศนิยม 3.12 \n
\t float x = 1.23f; \t //กำหนดให้ x เก็บเลข 1.23 ซึ่งเป็นตัวเลขชนิด float  </string>
    <string name="content2_3pic6"> \t\t final int MAX_DATA = 100; \n
\t\t final double Pi = 3.141; </string>
    <string name="Content2_3Body_29"> ตัวอย่างเช่น </string>
    <string name="Content3_1Leader">บทที่  3 \nคำสั่งควบคุมโปรแกรม</string>
    <string name="Content3_2Header"> 3.2 การเลือกทำแบบทางเดียว (if Statement) </string>
    <string name="Content3_2Body_1"> \t\t ในภาษาจาวาจะใช้คำสั่ง if เลือกทำแบบทางเดียวเพื่อจะตรวจสอบว่าชุดคำสั่งที่ตามมาจะทำหรือไม่ ในการทำงานของคำสั่งคอมพิวเตอร์จะตรวจสอบเงื่อนไขก่อน ถ้าเงื่อนไขเป็นจริงจะทำคำสั่งหรือสเตตเมนต์
ที่ตามหลังหรือเป็นสเตตเมนต์รวมที่อยู่ในเครื่องหมาย { } แต่ถ้าเงื่อนไขเป็นเท็จคอมพิวเตอร์จะกระโดดข้ามคำสั่งหรือสเตตเมนต์ตามมาและไปทำคำสั่งหรือสเตตเมนต์ต่อไป รูปแบบคำสั่งเป็นดังต่อไปนี้ \n </string>
    <string name="Content3_2Body_2"> รูปแบบ </string>
    <string name="Content3_2Body_3"> if (condition) {action statement}  </string>
    <string name="Content3_2Body_4"> \n\t\t โดยการตรวจสอบเงื่อนไขจะเป็นการกระทำแบบบูลีน ผลลัพธ์ที่ได้จะเป็นจริงหรือเท็จเท่านั้น ถ้าหากมีการใช้ตัวดำเนินการจะใช้ตัวดำเนินการที่ให้ผลลัพธ์เป็นแบบบูลีน สำหรับการทำงานของคำสั่ง if สารถเขียนเป็นผังงานได้ดังนี้ </string>
    <string name="Content3_2Body_5"> \t\t ตัวอย่าง โปรแกรมต่อไปนี้จะตรวจสอบว่า x มากกว่า y จริงหรือไม่ ถ้าหาก x มากกว่า y จริงโปรแกรมจะทำคำสั่งต่อมา \n </string>
    <string name="Content3_2Body_6"> \t int x = 0, y = 10; \n
\t if (x > y) \n
\t\t System.out.println(x + “ is greater than ” + y) </string>
</resources>