<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chap3_1Activity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="scroll|enterAlways"
    android:orientation="vertical"
    >

    <ScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="15">

            <TextView
                android:layout_weight="7.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical"
                android:weightSum="5">

                <TextView
                    android:id="@+id/Leader"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="0.5"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/Content3_1Leader"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:textColor="#000000"
                    android:text="@string/Content3_2Header" />

                <TextView
                    android:id="@+id/Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Content3_2Body_1"
                    android:textColor="#000000" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Content3_2Body_2"
                    android:textColor="#000000" />

                <TextView
                    android:background="@color/colorCode"
                    android:id="@+id/Body3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Content3_2Body_3"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/Body4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Content3_2Body_4"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/Pic1"
                    android:layout_width="match_parent"
                    android:layout_height="321dp"
                    android:layout_gravity="center"
                    android:src="@drawable/p3_2_1" />

                <TextView
                    android:id="@+id/Body5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Content3_2Body_5"
                    android:textColor="#000000" />

                <TextView
                    android:background="@color/colorCode"
                    android:id="@+id/Body6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Content3_2Body_6"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/Next_Button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:background="@drawable/circle"
                    android:drawableTop="@android:drawable/ic_menu_send"
                    android:singleLine="false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

            </LinearLayout>
            <TextView
                android:layout_weight="7.2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>